--- a/src/pages/signup/style.scss
+++ b/src/pages/signup/style.scss
@@ -1,9 +1,73 @@
-.MainDiv {
-  .textDetailsDiv {
-    .description {
-      .blueText {
-        color: blue;
+.mainDiv {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+  .backgroundImage img{
+    width: 100vw;
+    height: 100vh;
+  }
+  .borderLine {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 450px;
+    width: 800px;
+    border: 1px solid black;
+    border-radius: 12px;
+    h1 {
+      margin: 0;
+    }
+    p {
+      margin: 10;
+    }
+    .textDetailsDiv {
+      .description {
+        .blueText {
+          color: blue;
+        }
       }
     }
+  }
+}
+.nameInputBox {
+  width: 335px;
+  height: 35px;
+}
+.nameBox {
+  margin-top: 20px;
+}
+.lastNameInputBox {
+  width: 335px;
+  height: 35px;
+  margin-left: 15px;
+}
+.labelLastName {
+  margin-left: 273px;
+}
+.passBox {
+  margin-top: 20px;
+}
+input {
+  width: 690px;
+  height: 35px;
+  border-radius: 3px;
+  border: solid 1px black;
+  font-family: sans-serif;
+  font-size: 15px;
+}
+.redstar {
+  color: red;
+}
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  .submitButton {
+    width: 240px;
+    height: 35px;
   }
 }
