--- a/src/pages/signup/style.scss
+++ b/src/pages/signup/style.scss
@@ -65,6 +65,7 @@ input {
   align-items: center;
   justify-content: center;
   margin-top: 20px;
+  border-radius: 3px;
   .submitButton {
     width: 240px;
     height: 35px;
