--- a/src/components/navbar/style.scss
+++ b/src/components/navbar/style.scss
@@ -1,153 +1,102 @@
-@import "../../../mixins.scss";
+// App.scss
 
-.header {
-    position: fixed;
-    transform: translateY(0);
-    width: 100%;
-    height: 60px;
-    z-index: 1;
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+  }
+  
+  // Navbar styles
+  .navbar {
+    background-color: #333;
+    padding: 15px;
+    text-align: center;
+    color: white;
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    transition: all ease 0.5s;
-    z-index: 2;
-    &.top {
-        background: rgba(0, 0, 0, 0.25);
-        backdrop-filter: blur(3.5px);
-        -webkit-backdrop-filter: blur(3.5px);
-    }
-    &.show {
-        background-color: var(--black3);
-    }
-    &.hide {
-        transform: translateY(-60px);
-    }
-
-    .contentWrapper {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
+  
     .logo {
-        cursor: pointer;
-        display: flex;
-        img {
-            height: 40px;
-        }
+      font-size: 1.5em;
+      font-weight: bold;
     }
-    .menuItems {
-        list-style-type: none;
-        display: none;
-        align-items: center;
-        @include md {
-            display: flex;
-        }
-        .menuItem {
-            height: 60px;
-            display: flex;
-            align-items: center;
-            margin: 0 15px;
-            color: white;
-            font-weight: 500;
-            position: relative;
-            &.searchIcon {
-                margin-right: 0;
-            }
-            svg {
-                font-size: 18px;
-            }
-            cursor: pointer;
-            &:hover {
-                // color: var(--pink);
-                color: var(--yellow);
-            }
-        }
+  
+    .hamburger {
+      font-size: 1.5em;
+      cursor: pointer;
+      background: none;
+      border: none;
+      color: white;
     }
-
-    .mobileMenuItems {
-        display: flex;
-        align-items: center;
-        gap: 20px;
-        @include md {
-            display: none;
-        }
-        svg {
-            font-size: 18px;
-            color: white;
-        }
+  }
+  
+  // Sidebar styles
+  .sidebar {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+    display: flex;
+    flex-direction: column;
+  
+    a {
+      padding: 15px;
+      text-decoration: none;
+      font-size: 1.2em;
+      color: white;
+      display: block;
+      transition: 0.3s;
+  
+      &:hover {
+        color: #f1f1f1;
+      }
     }
-
-    &.mobileView {
-        background: var(--black3);
-        .menuItems {
-            display: flex;
-            position: absolute;
-            top: 60px;
-            left: 0;
-            background: var(--black3);
-            flex-direction: column;
-            width: 100%;
-            padding: 20px 0;
-            border-top: 1px solid rgba(255, 255, 255, 0.1);
-            animation: mobileMenu 0.3s ease forwards;
-            .menuItem {
-                font-size: 20px;
-                width: 100%;
-                height: auto;
-                padding: 15px 20px;
-                margin: 0;
-                display: flex;
-                flex-direction: column;
-                align-items: flex-start;
-                &:last-child {
-                    display: none;
-                }
-            }
-        }
+  
+    .closebtn {
+      padding: 15px;
+      text-decoration: none;
+      font-size: 1.2em;
+      color: white;
+      cursor: pointer;
+      background: none;
+      border: none;
     }
-
-    .searchBar {
-        width: 100%;
-        height: 60px;
-        background-color: white;
+  }
+  
+  // Responsive styles
+  @media screen and (max-width: 600px) {
+    .navbar a:not(:first-child) {
+      display: none;
+    }
+  
+    .navbar a.icon {
+      float: right;
+      display: block;
+    }
+  
+    .navbar.responsive {
+      position: relative;
+  
+      a.icon {
         position: absolute;
-        top: 60px;
-        animation: mobileMenu 0.3s ease forwards;
-        .searchInput {
-            display: flex;
-            align-items: center;
-            height: 40px;
-            margin-top: 10px;
-            width: 100%;
-            svg {
-                font-size: 20px;
-                flex-shrink: 0;
-                margin-left: 10px;
-                cursor: pointer;
-            }
-            input {
-                width: 100%;
-                height: 50px;
-                background-color: white;
-                outline: 0;
-                border: 0;
-                border-radius: 30px 0 0 30px;
-                padding: 0 15px;
-                font-size: 14px;
-                @include md {
-                    height: 60px;
-                    font-size: 20px;
-                    padding: 0 30px;
-                }
-            }
-        }
+        right: 0;
+        top: 0;
+      }
+  
+      a {
+        float: none;
+        display: block;
+        text-align: left;
+      }
+  
+      .sidebar {
+        width: 100%;
+      }
     }
-}
-
-@keyframes mobileMenu {
-    0% {
-        transform: translateY(-130%);
-    }
-    100% {
-        transform: translateY(0);
-    }
-}
+  }
+  
