--- a/mixins.scss
+++ b/mixins.scss
@@ -1,16 +1,21 @@
+@mixin sssm {
+  @media only screen and (max-width: 420px) {
+    @content;
+  }
+}
 @mixin ssm {
   @media only screen and (max-width: 480px) {
     @content;
   }
 }
 @mixin sm {
-  @media only screen and (min-width: 640px) {
+  @media only screen and (max-width: 640px) {
     @content;
   }
 }
 
 @mixin md {
-  @media only screen and (min-width: 768px) {
+  @media only screen and (max-width: 768px) {
     @content;
   }
 }
@@ -22,7 +27,7 @@
 }
 
 @mixin xl {
-  @media only screen and (min-width: 1280px) {
+  @media only screen and (max-width: 1280px) {
     @content;
   }
 }
