Footer On progress

--- a/src/pages/signup/style.scss
+++ b/src/pages/signup/style.scss
@@ -6,7 +6,7 @@
   height: 100vh;
   background: linear-gradient(49deg, rgba(0,151,255,1) 14%, rgba(115,0,255,1) 79%);
   .borderLine {
-    background-color: white;
+    background: white;
     display: flex;
     align-items: center;
     justify-content: center;
