--- a/src/components/footer/style.scss
+++ b/src/components/footer/style.scss
@@ -16,7 +16,7 @@ text-decoration: none;
 }
 .footer-container{
   width: 100%;
-  height: 300px;
+  height: 250px;
   background: #1A1A1D;
   padding-top: 30px;
   display: flex;
@@ -24,6 +24,8 @@ text-decoration: none;
   justify-content: center;
   justify-content: space-evenly;
   flex-shrink: inherit;
+  // flex-direction: column;
+  align-items: center;
 }
 .footer-address img{
   width: 150px;
