--- a/src/pages/joblisting/JobListing.css
+++ b/src/pages/joblisting/JobListing.css
@@ -2,4 +2,11 @@
     display:flex;
     flex-direction: row;
 }
+.filter_sort_container{
+    width:400px;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
 
+}
