--- a/src/components/footer/style.scss
+++ b/src/components/footer/style.scss
@@ -15,6 +15,7 @@ line-height: normal;
 text-decoration: none;
 }
 .footer-container{
+  margin-top: 40px;
   width: 100%;
   height: 250px;
   background: #1A1A1D;
@@ -50,6 +51,10 @@ text-decoration: none;
 .social-icons img{
   aspect-ratio: 3/2;
   object-fit: contain;
+}
+.social-icons{
+  font-size: 35px;
+  color: white;
 }
 b{
   font-size: 22px;
